Fix blinking sidebar on load, and z-index larger than excalidrawings

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -82,6 +82,7 @@ ul.task-list {
     padding: 20px;
     width: 100%;
     overflow-y: auto;
+    z-index: 3;
 }
 
 .backlink-card {
